deluge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deluge
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 8112
      name: http
    - port: 47594
      targetPort: 47594
      name: inbound
  selector:
    app: deluge
